k8s/base-new/middleware-users.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-users
  namespace: blog-staging
spec:
  stripPrefix:
    prefixes:
      - /users
