k8s/base-new/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: blog-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ndtson/blog-frontend-staging:1.2
          imagePullPolicy: Always
          ports:
            - containerPort: 80
