k8s/base-new/interaction-db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interaction-db
  namespace: blog-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interaction-db
  template:
    metadata:
      labels:
        app: interaction-db
    spec:
      containers:
        - name: interaction-db
          image: postgres:18-alpine
          ports:
            - containerPort: 5432
