k8s/base-new/blog-db.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"blog-db","namespace":"blog-platform"},"spec":{"ports":[{"port":5432,"targetPort":5432}],"selector":{"app":"blog-db"}}}
  creationTimestamp: "2026-05-04T20:23:49Z"
  name: blog-db
  namespace: blog-platform
  resourceVersion: "35122"
  uid: fccbea0e-9ce8-4bbe-852e-777e91ad86a5
spec:
  clusterIP: 10.43.245.80
  clusterIPs:
  - 10.43.245.80
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: blog-db
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
