k8s/base-new/blog-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-service
  template:
    metadata:
      labels:
        app: blog-service
    spec:
      containers:
        - name: blog-service
          image: ndtson/blog-service:latest
          ports:
            - containerPort: 8082
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: uploads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: blog-service
spec:
  selector:
    app: blog-service
  ports:
    - port: 8082
      targetPort: 8082
