k8s/base-new/customer-db.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"customer-db","namespace":"blog-platform"},"spec":{"ports":[{"port":5432,"targetPort":5432}],"selector":{"app":"customer-db"}}}
  creationTimestamp: "2026-05-04T20:23:49Z"
  name: customer-db
  namespace: blog-platform
  resourceVersion: "35139"
  uid: 98e68600-0b96-4861-9886-a2c168e3f720
spec:
  clusterIP: 10.43.140.253
  clusterIPs:
  - 10.43.140.253
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: customer-db
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
