k8s/base-new/file-db.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"file-db","namespace":"blog-platform"},"spec":{"ports":[{"port":5432,"targetPort":5432}],"selector":{"app":"file-db"}}}
  creationTimestamp: "2026-05-04T20:23:49Z"
  name: file-db
  namespace: blog-platform
  resourceVersion: "35163"
  uid: 531b5b4b-f41e-49b4-a516-048d7db12ab0
spec:
  clusterIP: 10.43.160.151
  clusterIPs:
  - 10.43.160.151
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: file-db
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
