k8s/base-new/interaction-db.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"interaction-db","namespace":"blog-platform"},"spec":{"ports":[{"port":5432,"targetPort":5432}],"selector":{"app":"interaction-db"}}}
  creationTimestamp: "2026-05-04T20:23:49Z"
  name: interaction-db
  namespace: blog-platform
  resourceVersion: "35184"
  uid: 44ce8fb9-9c9b-4220-adf2-1f6c7dadc294
spec:
  clusterIP: 10.43.188.207
  clusterIPs:
  - 10.43.188.207
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: interaction-db
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
