k8s/base-new/interaction-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interaction-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interaction-service
  template:
    metadata:
      labels:
        app: interaction-service
    spec:
      containers:
        - name: interaction-service
          image: ndtson/interaction-service:latest
          ports:
            - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: interaction-service
spec:
  selector:
    app: interaction-service
  ports:
    - port: 8086
      targetPort: 8086
