k8s/base-new/user-db.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"user-db","namespace":"blog-platform"},"spec":{"ports":[{"port":5432,"targetPort":5432}],"selector":{"app":"user-db"}}}
  creationTimestamp: "2026-05-04T20:23:49Z"
  name: user-db
  namespace: blog-platform
  resourceVersion: "35203"
  uid: b58a738b-49f2-41a0-862a-e12994568977
spec:
  clusterIP: 10.43.144.137
  clusterIPs:
  - 10.43.144.137
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: user-db
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
